# KettleKernel

./: .gitignore  CMakeLists.txt  KettleKernelMemoryLayout  LICENSE  README.md  build.sh  run.sh
boot/: boot.asm  gdt.asm  label.asm
drivers/: ports.c  ports.h
drivers/graphics/: intel.h  screen.h  vga.c  vga.h
kernel/: kernel.c  stdio.c  stdio.h  string.c  string.h  sys.h  vga.h
